<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="10"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history_24"
        android:orderInCategory="20"
        android:title="@string/history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="30"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_adult"
        app:actionViewClass="android.widget.CheckBox"
        android:checkable="true"
        android:checked="true"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="40"
        android:title="@string/adult"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_persons"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:orderInCategory="45"
        android:title="@string/persons"
        app:showAsAction="ifRoom" />

</menu>