<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsFragmentRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    android:clickable="true"
    android:focusable="true"
    tools:context=".view.DetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/detailsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/details_title_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_original_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:minLines="1"
                android:text="@string/original_title"
                android:textSize="@dimen/details_title1_text_size"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/details_poster"
                    android:layout_width="@dimen/details_image_width"
                    android:layout_height="@dimen/details_image_height"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/details_marginStart"
                    android:contentDescription="@string/poster_description"
                    android:scaleType="fitXY"
                    tools:srcCompat="@drawable/poster" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/details_genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/details_marginStart"
                        android:padding="@dimen/details_padding"
                        android:text="@string/genres"
                        android:textSize="@dimen/details_text_size" />

                    <TextView
                        android:id="@+id/details_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/details_marginStart"
                        android:padding="@dimen/details_padding"
                        android:text="@string/duration"
                        android:textSize="@dimen/details_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/details_vote_average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/details_marginStart"
                            android:padding="@dimen/details_padding"
                            android:text="@string/rating"
                            android:textSize="@dimen/details_text_size" />

                        <ImageView
                            android:id="@+id/imageStarDetail"
                            android:layout_width="@dimen/star_width"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:contentDescription="@string/star_description"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/rating1" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/details_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/details_marginStart"
                        android:padding="@dimen/details_padding"
                        android:text="@string/budget"
                        android:textSize="@dimen/details_text_size" />

                    <TextView
                        android:id="@+id/details_revenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/details_marginStart"
                        android:padding="@dimen/details_padding"
                        android:text="@string/revenue"
                        android:textSize="@dimen/details_text_size" />

                    <TextView
                        android:id="@+id/details_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/details_marginStart"
                        android:padding="@dimen/details_padding"
                        android:text="@string/release_date"
                        android:textSize="@dimen/details_text_size" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/details_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/details_marginStart"
                android:layout_marginTop="@dimen/details_marginStart"
                android:padding="@dimen/details_padding"
                android:text="@string/overview"
                android:textSize="@dimen/details_text_size" />

            <ImageView
                android:id="@+id/details_backdrop"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/details_marginStart"
                android:contentDescription="@string/poster_description"
                android:scaleType="fitXY"
                tools:srcCompat="@drawable/back" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:layout_marginTop="@dimen/details_marginStart"
                android:background="@color/colorAccent" />

            <EditText
                android:id="@+id/details_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/hint_text_note"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/detailsFragmentLoadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        tools:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>